--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,3 @@
-/target
-/classes
-/checkouts
-pom.xml
-pom.xml.asc
-*.jar
-*.class
-/.lein-*
-/.nrepl-port
-.hgignore
-.hg/
+target/
+.cpcache/
+.lein-repl-history
